add new website from server na

--- a/xem-phim-bo/than-an-vuong-toa/index.html
+++ b/xem-phim-bo/than-an-vuong-toa/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/may-bay-mat-tich-phan-4" title="Máy bay mất tích (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/lay-thay-thay-di-dau" title="Lạy Thầy, Thầy Đi Đâu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/may-bay-mat-tich-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lay-thay-thay-di-dau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Máy bay mất tích (Phần 4)
+             Lạy Thầy, Thầy Đi Đâu
             </span>
             <span class="list-top-movie-item-en">
-             Manifest (Season 4)
+             Quo Vadis
             </span>
             <span class="list-top-movie-item-view">
              5 lượt xem
@@ -1682,21 +1682,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-den-tan-cung" title="Yêu Đến Tận Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-dep-tron-chay" title="Người Đẹp Trốn Chạy">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-den-tan-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-dep-tron-chay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Đến Tận Cùng
+             Người Đẹp Trốn Chạy
             </span>
             <span class="list-top-movie-item-en">
-             Love to the End
+             兇手還未睡
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1704,40 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-tu-shawshank" title="Nhà tù Shawshank">
+          <a class="list-top-movie-link" href="/phim-moi/dung-choc-anh-nua-ma-nagatoro-phan-2" title="Đừng Chọc Anh Nữa Mà, Nagatoro! Phần 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tu-shawshank-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dont-toy-with-me-miss-nagatoro-2nd-attack-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà tù Shawshank
+             Đừng Chọc Anh Nữa Mà, Nagatoro! Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             The Shawshank Redemption
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tuoi-hai-muoi" title="Tuổi Hai Mươi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-hai-muoi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tuổi Hai Mươi
-            </span>
-            <span class="list-top-movie-item-en">
-             Twenty Your Life On
+             Don't Toy with Me, Miss Nagatoro 2nd Attack
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1748,18 +1726,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-dam-me" title="Hành Trình Của Đam Mê">
+          <a class="list-top-movie-link" href="/phim-moi/mua-dong-khoi-lua-ukraine-chien-dau-vi-tu-do" title="Mùa đông khói lửa: Ukraine chiến đấu vì tự do">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-dam-me-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-dong-khoi-lua-ukraine-chien-dau-vi-tu-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành Trình Của Đam Mê
+             Mùa đông khói lửa: Ukraine chiến đấu vì tự do
             </span>
             <span class="list-top-movie-item-en">
-             Inside Llewyn Davis
+             Winter on Fire: Ukraine's Fight for Freedom
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xin-hay-ban-cho-toi-mot-doi-canh" title="Xin Hãy Ban Cho Tôi Một Đôi Cánh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-hay-ban-cho-toi-mot-doi-canh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xin Hãy Ban Cho Tôi Một Đôi Cánh
+            </span>
+            <span class="list-top-movie-item-en">
+             Please Give Me A Pair Of Wings
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
